added deletion to watchlist, stopped adding duplicates to watchlist

--- a/src/index.css
+++ b/src/index.css
@@ -303,6 +303,18 @@ body {
   transition: all 0.3s;
 }
 
+.btn-added{
+  background-color: var(--color-background-500);
+  color: var(--color-text);
+  border: none;
+  border-radius: 10rem;
+  font-size: 1.4rem;
+  padding: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
 .btn-add:hover {
   background-color: var(--color-primary-light);
 }
